Nome del Pacchetto piu adatto a me

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "simon/InLibs",
+    "name": "IlNullatore/InLibs",
     "description": "Test composer",
     "version": "dev-master",
     "type": "library",
