--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "psr/log": "~1.0",
+        "psr/log": "~1.0"
     },
     "require-dev": { },
     "suggest": { },
