--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,10 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "psr/log": "~1.0"
-    },
-    "require-dev": { 
+        "psr/log": "~1.0",
         "monolog/monolog" : "*"
-     },
+    },
+    "require-dev": {  },
     "suggest": { },
     "autoload": { },
     "provide": { }
