--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": ">=5.3.0",
         "psr/log": "~1.0",
-        "monolog/monolog" : "*"
+        "monolog/monolog" : "*",
+        "raven/raven": "~0.5"
     },
     "require-dev": {  },
     "suggest": { },
