--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,12 @@
         "monolog/monolog" : "*",
         "raven/raven": "~0.5"
     },
-    "psr-4": {
-                "HelloWorld\\": "src/HelloWorld/"
-    },
     "require-dev": {  },
     "suggest": { },
-    "autoload": { },
+    "autoload": { 
+        "psr-0": {
+                    "HelloWorld": "src/"
+        }
+    },
     "provide": { }
 }
